components/medecine-page/medecine-page.pcss
/* ... */
.medecine-page__blank {
	border-radius: 16px;
	background: #f8f7f8;
}

.medecine-page__buttons {
	text-align: center;
}

.medecine-page__menu {

	@media (--tablet) {
		position: sticky;
		top: 150px;
		left: 0;
		height: fit-content;
		flex: 0 0 240px;
	}

	@media (--desktop-small) {
		flex: 0 0 310px;
	}
}

.medecine-page__menu-title {
	margin-bottom: 16px;
	font-weight: bold;
	font-size: 24px;
	line-height: 28px;
	color: var(--black);
}

.medecine-page__list {
	display: flex;
	flex-direction: column;
}

.medecine-page__item {}

.medecine-page__link {
	display: flex;
	padding: 12px 5px;
	border-bottom: 1px solid #E3E3EC;
	font-size: 16px;
	line-height: 19px;
	text-decoration: none;
	color: var(--black);

	&:hover {
		background: rgba(244, 241, 241, 0.26);
		color: var(--secondary);
	}
}

.medecine-page__content-block h4 {
	margin: 24px 0 10px;
}


.medecine-page__info-content {
	display: flex;
	flex-direction: column;
	gap: 40px;
	margin-bottom: 50px;

	@media (--tablet) {
		flex-direction: row;
		gap: 20px;
	}

	@media (--desktop-small) {
		margin-bottom: 70px;
	}
}










.medecine-page__header {
	margin-bottom: 40px;

	& p {
		font-size: 14px;
	}

	@media (--tablet) {
		margin-bottom: 54px;

		& p {
			font-size: 16px;
		}
	}

	@media (--desktop-small) {
		margin-bottom: 40px;
	}
}

.medecine-page__header-label {
	margin-bottom: 20px;

	@media (--tablet) {
		display: flex;
		gap: 3px;
		margin-bottom: 30px;
	}
}

.medecine-page__header-info {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.medecine-page__header-row {
	display: flex;
	align-items: center;
	justify-content: flex-start;
	gap: 5px 14px;
}

.medecine-page__header-row svg {
	min-width: 25px;
	width: 25px;
	height: auto;
}

.medecine-page__products {}

.medecine-page__anchors-header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 1300px;
	min-width: 1300px;
	margin: 0 auto;
	margin-bottom: 10px;

}

.medecine-page__anchors-scrollbar {
	margin-bottom: 30px;
	background-color: var(--white);
	overflow-x: auto;
	overflow-y: hidden;
	scrollbar-color: var(--primary) #E4E4E4;
	scrollbar-width: thin;

	@media (--tablet) {
		margin-bottom: 50px;
	}

	@media (--desktop-medium) {
		margin-bottom: 80px;
	}
}

.medecine-page__anchors-scrollbar {
	border-bottom: 1px solid #F2F2F2;
}

.medecine-page__anchors-container.fixed~div {
	margin-top: 90px;
	transition: all 0.5s linear;

	@media (--tablet) {
		margin-top: 110px;
	}

	@media (--desktop-medium) {
		margin-top: 140px;
	}
}

.medecine-page__anchors-container.fixed {
	position: fixed;
	top: 50px;
	left: 0;
	width: 100%;
	background-color: var(--white);
	filter: drop-shadow(0px 9px 10px rgba(0, 0, 0, 0.05));
	animation: fade 0.2s linear;
	z-index: 9;

	@media (--tablet) {
		top: 78px;
	}

	& .medecine-page__anchors-scrollbar {
		margin: 0 12px;


		@media (--mobile-medium) {
			margin: 0 20px;
		}

		@media (--desktop-medium) {
			margin: 0 27px;
		}
	}

}

.medecine-page__anchors-container.fixed .medecine-page__anchors-header {
	margin-bottom: 0;
}

.medecine-page__anchors-container.fixed .medecine-page__anchors-link {
	height: 46px;
}

@media (max-width: 1360px) {
	.medecine-page__anchors-container.fixed {
		padding-bottom: 7px;
	}

	.medecine-page__anchors-container.fixed .medecine-page__anchors-header {
		margin-bottom: 10px;
	}
}

.medecine-page__anchors-scrollbar::-webkit-scrollbar {
	height: 6px;
}

.medecine-page__anchors-scrollbar::-webkit-scrollbar-track {
	height: 6px;
	background: #E4E4E4;
	border-radius: 3px;
}

.medecine-page__anchors-scrollbar::-webkit-scrollbar-thumb {
	height: 6px;
	border-radius: 3px;
	background: var(--primary);
}

.medecine-page__anchors-link {
	display: flex;
	align-items: center;
	width: fit-content;
	height: 50px;
	font-weight: 700;
	font-size: 18px;
	line-height: 21px;
	color: var(--half-black);
}


.medecine-page__anchors-link.active {
	border-bottom: 3px solid var(--secondary);
	color: var(--secondary);
}

.medecine-page__products-list {
	display: flex;
	flex-direction: column;
	gap: 20px;

	@media (--tablet) {
		gap: 10px;
	}

	@media (--desktop-small) {
		gap: 20px;
	}
}

.medecine-page__products {}

.medecine-product {
	display: grid;
	grid-template-columns: 100px 1fr;
	gap: 10px 20px;
	padding-bottom: 20px;
	border-bottom: 1px dashed #D8D8D8;

	@media (--tablet) {
		display: flex;
	}
}

.medecine-product__picture {
	position: relative;
	display: flex;
	justify-content: center;
	align-items: flex-start;

	@media (--tablet) {
		flex: 0 1 315px;
		align-items: center;
		min-width: 150px;
	}
}

.medecine-product__img {
	max-width: 100%;
	width: 100px;
	height: auto;
	padding-top: 30px;

	@media (--tablet) {
		width: 100%;
		padding-top: 0;
	}
}

.medecine-product__picture svg {
	position: absolute;
	top: 0;
	left: 0;
	width: 64px;

	@media (--tablet) {
		width: 92px;
	}
}

.medecine-product__info {
	@media (--tablet) {
		flex: 0 1 400px;
	}
}

.medecine-product__title {
	margin-bottom: 5px;
	font-weight: 700;
	font-size: 18px;
	line-height: 20px;
	color: #333333;

	@media (--tablet) {
		font-size: 24px;
		line-height: 35px;
	}
}

.medecine-product__rows {
	display: grid;
	gap: 3px;

	@media (--tablet) {
		gap: 5px;
	}
}

.medecine-product__row {
	display: flex;
	flex-direction: column;


	@media (--mobile-medium) {
		align-items: center;
		justify-content: space-between;
		flex-direction: row;
	}
}

.medecine-product__row p {
	text-align: left;
	font-weight: 400;
	font-size: 12px;
	line-height: 16px;
	color: #000000;

	@media (--desktop-medium) {
		width: 250px;
		font-weight: 700;
		font-size: 16px;
		line-height: 21px;
		color: var(--gray);
	}
}

.medecine-product__row span {
	text-align: left;
	font-weight: 400;
	font-size: 12px;
	line-height: 16px;
	color: var(--gray);

	@media (--desktop-medium) {
		width: 250px;
		font-size: 16px;
		line-height: 21px;
	}
}
/* ... */

